pushとプルのテストのためhtmlを変更

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 
     <body>
         {% block content %}
-        <h1>こんにちは</h1>
+        <h1>Hello World</h1>
         {% endblock content %}
 
         <!-- Optional JavaScript -->
