Fix: ユーザー登録画面変更のテストのため各種ファイル変更 Add: ユーザー登録画面変更のテストのためregister_user.html追加

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,8 @@
     </head>
 
 
-    <body>
+    <body class="container">
         {% block content %}
-        <h1>Hello World</h1>
         {% endblock content %}
 
         <!-- Optional JavaScript -->
