--- a/templates/base.html
+++ b/templates/base.html
@@ -4,18 +4,25 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+        <title>{% block title %}{% endblock title %}</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-        {% block header %}
-        {% endblock header %}
+        {% block header %}{% endblock header %}
     </head>
 
 
     <body class="container">
-        {% block content %}
-        {% endblock content %}
+        <nav class="navbar navbar-expand navbar-light bg-light">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item"><a href="{% url 'home' %}" class="nav-link">home</a></li>
+                <li class="nav-item"><a href="" class="nav-link">members</a></li>
+                <li class="nav-item"><a href="" class="nav-link">data</a></li>
+            </ul>
+            <span>logined: <span class="h6">"{{login_user}}".</span> </span>
+        </nav>
+
+        {% block content %}{% endblock content %}
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
