--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
         <nav class="navbar navbar-expand navbar-light bg-light">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a href="{% url 'home' %}" class="nav-link">home</a></li>
+                <li class="nav-item"><a href="{% url 'update' user.pk %} " class="nav-link">update</a></li>
                 <li class="nav-item"><a href="" class="nav-link">members</a></li>
                 <li class="nav-item"><a href="" class="nav-link">data</a></li>
             </ul>
