--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a href="{% url 'home' %}" class="nav-link">home</a></li>
                 <li class="nav-item"><a href="{% url 'update' user.pk %} " class="nav-link">update</a></li>
-                <li class="nav-item"><a href="" class="nav-link">members</a></li>
+                <li class="nav-item"><a href="{% url 'list' %}" class="nav-link">teammate</a></li>
                 <li class="nav-item"><a href="" class="nav-link">data</a></li>
             </ul>
             <span>logined: <span class="h6">"{{login_user}}".</span> </span>
