--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
                 <li class="nav-item"><a href="{% url 'home' %}" class="nav-link">home</a></li>
                 <li class="nav-item"><a href="{% url 'update' user.pk %} " class="nav-link">update</a></li>
                 <li class="nav-item"><a href="{% url 'list' %}" class="nav-link">teammate</a></li>
+                <li class="nav-item"><a href="{% url 'delete' %}" class="nav-link">delete</a></li>
                 <li class="nav-item"><a href="" class="nav-link">data</a></li>
                 </ul>
             <span>logined: <span class="h6">"{{login_user}}".</span> </span>
