Add: dataview,data.html
* dataviewの表題部分はテスト済み

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
                 <li class="nav-item"><a href="{% url 'update' user.pk %} " class="nav-link">update</a></li>
                 <li class="nav-item"><a href="{% url 'list' %}" class="nav-link">teammate</a></li>
                 <li class="nav-item"><a href="{% url 'delete' %}" class="nav-link">delete</a></li>
-                <li class="nav-item"><a href="" class="nav-link">data</a></li>
+                <li class="nav-item"><a href="{% url 'data' %}" class="nav-link">data</a></li>
                 </ul>
             <span>logined: <span class="h6">"{{login_user}}".</span> </span>
         </nav>
