--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,16 @@
             <span>logined: <span class="h6">"{{login_user}}".</span> </span>
         </nav>
 
+        
         {% block content %}{% endblock content %}
+        
+        {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+        {% endif %}
 
         <hr>
         <div class="my-3">
