--- a/templates/base.html
+++ b/templates/base.html
@@ -24,17 +24,13 @@
             <span>logined: <span class="h6">"{{login_user}}".</span> </span>
         </nav>
 
-        
+
         {% block content %}{% endblock content %}
         
-        {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-
+        {% block messages %}
+        {% include 'messages.html' %}
+        {% endblock messages %}
+            
         <hr>
         <div class="my-3">
             <span class="font-weight-bold"><a href="{% url 'logout' %}">[logout]</a></span>
