--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
                 <li class="nav-item"><a href="{% url 'list' %}" class="nav-link">teammate</a></li>
                 <li class="nav-item"><a href="{% url 'delete' %}" class="nav-link">delete</a></li>
                 <li class="nav-item"><a href="{% url 'data' %}" class="nav-link">data</a></li>
+                <li class="nav-item"><a href="{% url 'stats' %}" class="nav-link">stats</a></li>
                 </ul>
             <!-- views側からcontextで渡さなくても、{{ request.user.username }}で、ログイン中のユーザーモデルインスタンスのusername属性参照できる -->
             <span>logined: <span class="h6">"{{ request.user.username }}".</span> </span>
