--- a/templates/login_register/login_register_base.html
+++ b/templates/login_register/login_register_base.html
@@ -17,13 +17,7 @@
         {% block content %}
         {% endblock content %}
 
-        {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
+        {% include 'messages.html' %}
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
