Add: statsに出塁率追加
Update: base.htmlなど編集し、フォーム、メッセージフォームの横幅をナビゲーションバーと同じ幅にし、掌田を参考にタイトルと説明を追加

Update: 最初にログイン画面を表示し、その画面にユーザー登録へのリンクを表示するようurls,htmlを編集

* 以上三つ動作確認済み

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,6 @@
         <title>{% block title %}{% endblock title %}</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
-        {% block header %}{% endblock header %}
     </head>
 
 
@@ -25,6 +23,9 @@
             <!-- views側からcontextで渡さなくても、{{ request.user.username }}で、ログイン中のユーザーモデルインスタンスのusername属性参照できる -->
             <span>logined: <span class="h6">"{{ request.user.username }}".</span> </span>
         </nav>
+        <div>
+            {% block header %}{% endblock header %}
+        </div>
 
 
         {% block content %}{% endblock content %}
