--- a/templates/list.html
+++ b/templates/list.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
 
+{% block header %}
+<h1 class="display-4 text-primary">Teammate</h1>
+<p class="caption">※現在ログイン中のユーザーと同じチーム名の選手情報を表示しています。
+</p>
+{% endblock header %}
+
+
 {% block content %}
 
 
