--- a/templates/login_register/login.html
+++ b/templates/login_register/login.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<div class="container">
+<!-- <div class="container"> -->
 <form class="form-signin" method="post">{% csrf_token %}
     <h1 class="h3 mb-3 font-weight-normal">Please login</h1>
     <label for="inputEmail" class="sr-only">Username</label>
@@ -13,5 +13,9 @@
     </div>
     <button class="btn btn-lg btn-primary btn-block" type="submit">login</button>
 </form>
-</div>
+<br>
+<form action="{% url 'register' %}" class="form-signin">
+    <button class="btn btn-lg btn-primary btn-block" type="submit">ユーザー登録</button>
+</form>
+<!-- </div> -->
 {% endblock content %}
