--- a/templates/messages.html
+++ b/templates/messages.html
@@ -1,6 +1,6 @@
 {% if messages %}
 <!-- class="list-unstyled"はブートストラップで、先頭マークのないリスト表示を指定するもの -->
-<ul class="list-unstyled col-sm-12">
+<ul class="list-unstyled">
     {% for message in messages %}
     <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
     {% endfor %}
