--- a/templates/data.html
+++ b/templates/data.html
@@ -2,12 +2,18 @@
 
 {% block header %}
 <h1 class="display-4 text-primary">Data</h1>
-<p class="caption">※ピッチャーとバッターのユーザー名を入力して決定ボタンを押すと、
+<p class="caption">
+{% if pitchername and battername %}
+※一球ごとの、状況・投球内容・バッティング内容を記録できます。
+打席結果のフォームで確定を選び送信すると、入力画面が遷移し打席結果詳細を記録できます。
+{% else %}
+※ピッチャーとバッターのユーザー名を入力して決定ボタンを押すと、
     入力した選手間での一球毎の対戦データを記録するフォーム画面へ遷移します。
 </p>
+{% endif %}
 {% endblock header %}
-{% block content %}
 
+{% block content %}
 <!-- ifテンプレートタグ内はif contextでは、ifにかからない -->
 {% if pitchername and battername %}
 <div class="container">
@@ -16,7 +22,6 @@
 {% include 'messages.html' %}
 
 <form action="" method="POST">{% csrf_token %}
-    
     <table class="table">
     {% if contacted_results_form %}
         {{ contacted_results_form }}
@@ -40,11 +45,11 @@
         </th>
     </tr>
     </table>
-
 </form>
 
 <!-- 以下、初回GET時の表示部分。ピッチャーとバッターのusernameをフォームに入力して送信する -->
 {% else %}
+{% include 'messages.html' %}
 <!-- <div class="container"> -->
 <form class="form-signin" method="post">{% csrf_token %}
     <!-- <h1 class="h3 mb-3 font-weight-normal">Please select pitcher and batter</h1> -->
@@ -61,9 +66,7 @@
     <button class="btn btn-lg btn-primary btn-block" type="submit">決定</button>
 </form>
 <!-- </div> -->
-{% include 'messages.html' %}
 {% endif %}
-
 {% endblock content %}
 
 {% block messages %}
