Update: data,register画面での注意書きとdataピッチャーバッター名入力フォームのplaceholderをpicher(username)と分かりやすいように変更
* 表示テスト済み

--- a/templates/data.html
+++ b/templates/data.html
@@ -58,9 +58,9 @@
     {{ error }}
     {% endif %}
     <label for="pitchername" class="sr-only">Pitcher(username)</label>
-    <input type="text" id="pitchername" class="form-control" placeholder="username" name="pitchername" required autofocus>
+    <input type="text" id="pitchername" class="form-control" placeholder="picher(username)" name="pitchername" required autofocus>
     <label for="battername" class="sr-only">Batter(username)</label>
-    <input type="text" id="battername" class="form-control" placeholder="username" name="battername" required>
+    <input type="text" id="battername" class="form-control" placeholder="batter(username)" name="battername" required>
     <div class="checkbox mb-3">
     </div>
     <button class="btn btn-lg btn-primary btn-block" type="submit">決定</button>
