Add: style.css追加とそれに伴いurls,settingsに追記
* 反映されないため要修正

--- a/templates/delete.html
+++ b/templates/delete.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Delete{% endblock title %}
+
 {% block header %}
 <h1 class="display-4 text-primary">Delete</h1>
 <p class="caption">※下に表示しているログイン中のユーザーを削除します。
