--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %}
 
+{% block title %}Home{% endblock title %}
+
 {% block content %}
 <div class="jumbotron">
     <h1 class="display-4">Home</h1>
-    <p class="lead">メニュー一覧です</p>
+    <p class="lead">ホーム画面です</p>
 </div>
 {% endblock content %}
