--- a/templates/list.html
+++ b/templates/list.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block title %}Teammate{% endblock title %}
+<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 
 {% block header %}
 <h1 class="display-4 text-primary">Teammate</h1>
