--- a/templates/login_register/register.html
+++ b/templates/login_register/register.html
@@ -1,5 +1,7 @@
 {% extends "login_register/login_register_base.html" %}
 
+{% block title %}Register{% endblock title %}
+
 {% block header %}
 <h1 class="display-4 text-primary">Register</h1>
 <p class="caption">※（必須）の欄は必ず入力してください。
