--- a/templates/login_register/login.html
+++ b/templates/login_register/login.html
@@ -1,4 +1,7 @@
 {% extends 'login_register/login_register_base.html' %}
+
+{% block title %}Login{% endblock title %}
+
 {% block header %}
 <h1 class="display-4 text-primary">Login</h1>
 <p class="caption">※ユーザー名とパスワードを入力して「login」ボタンを押してください。
