--- a/templates/update.html
+++ b/templates/update.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Update{% endblock title %}
+
 {% block header %}
 <h1 class="display-4 text-primary">Update</h1>
 <p class="caption">※ログイン中のユーザーの登録情報です。
